<?xml version="1.0" encoding="UTF-8"?>
    <project xmlns="http://maven.apache.org/POM/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/POM/4.0.0 http://maven.apache.org/POM/xsd/maven-4.0.0.xsd">
        <modelVersion>4.0.0</modelVersion>
        <groupId>edu.tcu.mi.ihe</groupId>
        <artifactId>IHE-Technical-Frameworks</artifactId>
        <version>0.4.0-SNAPSHOT</version>
        <packaging>pom</packaging>
        <name>IHE-Technical-Frameworks</name>
        <description>
            Integrating The Healthcare Enterprise Technical Frameworks
        </description>
        <parent>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-parent</artifactId>
            <version>1.3.0.RELEASE</version>
            <relativePath />
            <!-- lookup parent from repository -->
        </parent>
        <properties>
            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
            <java.version>1.7</java.version>
            <hapi.version>2.1</hapi.version>
            <axiom.version>1.2.14</axiom.version>
        </properties>
        <dependencies>
            <!-- ======== spring-starter ======== -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <exclusions>
                    <exclusion>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- ======== spring-actuator ======== -->
            <!-- provides all of Spring Boot production-ready features. -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
            </dependency>
            <!-- ======== spring-log4j ======== -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-log4j</artifactId>
            </dependency>
            <!-- ======== spring-test ======== -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
            </dependency>
            <!-- ======== spring-aop ======== -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-aop</artifactId>
            </dependency>
            <!-- ==== Execution Time Measurement ==== http://jetm.void.fm/intro/one_minute_tutorial.html -->
            <dependency>
                <groupId>fm.void.jetm</groupId>
                <artifactId>jetm-spring</artifactId>
                <version>1.3.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
            </dependency>
        </dependencies>
        <modules>
            <module>IHE-Technical-Frameworks-core</module>
            <module>IHE-Technical-Frameworks-utility</module>
            <module>IHE-Technical-Frameworks-actors</module>
            <module>IHE-Technical-Frameworks-web</module>
			<module>IHE-IT-Infrastructure</module>
        </modules>
        <distributionManagement>
            <snapshotRepository>
                <id>nexus-snapshots</id>
                <name>Sonatype Nexus snapshot repository</name>
                <url>http://203.64.84.174:8081/nexus/content/repositories/snapshots
                </url>
            </snapshotRepository>
        </distributionManagement>
        <dependencyManagement>
            <dependencies>
                <dependency>
                    <groupId>org.springframework.cloud</groupId>
                    <artifactId>spring-cloud-starter-parent</artifactId>
                    <version>Angel.SR3</version>
                    <type>pom</type>
                    <scope>import</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.ws.commons.axiom</groupId>
                    <artifactId>axiom-api</artifactId>
                    <version>${axiom.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.ws.commons.axiom</groupId>
                    <artifactId>axiom-dom</artifactId>
                    <version>${axiom.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.ws.commons.axiom</groupId>
                    <artifactId>axiom-impl</artifactId>
                    <version>${axiom.version}</version>
                </dependency>
                <dependency>
                    <groupId>edu.tcu.mi.ihe</groupId>
                    <artifactId>IHE-Technical-Frameworks-core</artifactId>
                    <version>${project.version}</version>
                </dependency>
                <dependency>
                    <groupId>edu.tcu.mi.ihe</groupId>
                    <artifactId>IHE-Technical-Frameworks-utility</artifactId>
                    <version>${project.version}</version>
                </dependency>
                <dependency>
                    <groupId>edu.tcu.mi.ihe</groupId>
                    <artifactId>ITI-020-RecordAuditEvent</artifactId>
                    <version>${project.version}</version>
                </dependency>
            </dependencies>
        </dependencyManagement>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <forkCount>3</forkCount>
                        <reuseForks>true</reuseForks>
                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                        <systemPropertyVariables>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.eluder.coveralls</groupId>
                    <artifactId>coveralls-maven-plugin</artifactId>
                    <version>4.1.0</version>
                    <configuration>
                        <coberturaReports>
                        </coberturaReports>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>cobertura-maven-plugin</artifactId>
                    <version>2.7</version>
                    <configuration>
                        <format>xml</format>
                        <maxmem>256m</maxmem>
                        <!-- aggregated reports for multi-module projects -->
                        <aggregate>true</aggregate>
                    </configuration>
                </plugin>
            </plugins>
        </build>
        <developers>
            <developer>
                <id>Gaduo</id>
                <name>Yu Wei, Chien</name>
                <email>foxb1249@gmail.com</email>
            </developer>
        </developers>
    </project>
